bug(stopTime): fixed bug with filling a gap stopping the current task
#832800

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -259,6 +259,10 @@ dl {
       font-size: 12px;
       font-family: "Lucida Console", Monaco, monospace;
       margin-right:15px;
+      &.flash{
+        background-color: rgba(0, 255, 236, 0.4);
+        box-shadow: 0px 0px 6px rgba(0, 255, 236, 0.86);
+      }
     }
     .controls {
       text-align: right;
